Updated the movie details application

--- a/Favourites/favourites.html
+++ b/Favourites/favourites.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie deatail - Joeflix</title>
-    <link rel="stylesheet" href="../Movie_Section/index.css">
+    <title>Favourites - Joetex</title>
+    <link rel="stylesheet" href="../index.css">
     <link rel="shortcut icon" href="../logo.png" type="image/x-icon">
 </head>
 
@@ -23,7 +23,7 @@
     <nav>
         <img src="../logo.png" alt="Joeflix" class="logo">
         <div class="nav_div">
-            <a href="../Movie_Section/index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="favourites.html">Favourites</a>
             <a href="../Movie_genres/genres.html">Genres</a>
             <img src="../white_menu.png" alt="" class="menu" id="menu" style="display: none;">
@@ -31,9 +31,9 @@
     </nav>
     
     <div class="second_nav_div" id="second_nav_div">
-        <a href="">Home</a>
-        <a href="../Favourites/index.html">Favourites</a>
-        <a href="../Movie_genres/index.html">Genres</a>
+        <a href="../index.html">Home</a>
+        <a href="favourites.html">Favourites</a>
+        <a href="../Movie_genres/genres.html">Genres</a>
 
         <span class="close" id="close">&times;</span>
     </div>
@@ -49,7 +49,7 @@
     <p style="text-align: center; font-size: 20px;">    
         <a href="../Movie_Section/index.html" style="text-decoration: none; color: #ffffff;">Exit Favourites</a>
     </p>
-    <script src="../Movie_Section/index.js"></script>
+    <script src="../index.js"></script>
     <script src="../overview/index.js"></script>
     <script src="index.js"></script>
 
