--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="../logo.png" type="image/x-icon">
-    <title>Movie deatail - Joeflix</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <title>Movie deatails - Joetex</title>
 
     <style>
         #watch {
@@ -20,23 +19,23 @@
 
 <body>
     <nav>
-        <img src="../logo.png" alt="Joeflix" class="logo">
+        <img src="logo.png" alt="Joeflix" class="logo">
         <form id="form" class="form">
             <input type="text" id="search" class="search" placeholder="Search for movies...">
             <button id="form-btn" class="search_btn">Search</button>
         </form>
         <div class="nav_div">
             <a href="index.html">Home</a>
-            <a href="../Favourites/favourites.html">Favourites</a>
-            <a href="../Movie_genres/genres.html">Genres</a>
-            <img src="../white_menu.png" alt="" class="menu" id="menu" style="display: none;">
+            <a href="./Favourites/favourites.html">Favourites</a>
+            <a href="./Movie_genres/genres.html">Genres</a>
+            <img src="white_menu.png" alt="" class="menu" id="menu" style="display: none;">
         </div>
     </nav>
     
     <div class="second_nav_div" id="second_nav_div">
-        <a href="">Home</a>
-        <a href="../Favourites/index.html">Favourites</a>
-        <a href="../Movie_genres/index.html">Genres</a>
+        <a href="index.html">Home</a>
+        <a href="./Favourites/favourites.html">Favourites</a>
+        <a href="./Movie_genres/genres.html">Genres</a>
 
         <span class="close" id="close">&times;</span>
     </div>
@@ -61,7 +60,7 @@
     </main>
 
     <script src="index.js"></script>
-    <script src="../overview/index.js"></script>
+    <script src="./overview/index.js"></script>
 
     <script>
 const second_nav_div = document.getElementById("second_nav_div")
