--- a/overview/overview.html
+++ b/overview/overview.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Movie_Section/index.css">
+    <link rel="stylesheet" href="../index.css">
     <link rel="shortcut icon" href="../logo.png" type="image/x-icon">
-    <title>Movie overview - Joeflix</title>
+    <title>Movie overview - Joetex</title>
 </head>
 
 <body>
@@ -14,17 +14,17 @@
     <nav>
         <img src="../logo.png" alt="Joeflix" class="logo">
         <div class="nav_div">
-            <a href="../Movie_Section/index.html">Home</a>
-            <a href="favourites.html">Favourites</a>
+            <a href="../index.html">Home</a>
+            <a href="../Favourites/favourites.html">Favourites</a>
             <a href="../Movie_genres/genres.html">Genres</a>
             <img src="../white_menu.png" alt="" class="menu" id="menu" style="display: none;">
         </div>
     </nav>
     
     <div class="second_nav_div" id="second_nav_div">
-        <a href="">Home</a>
-        <a href="../Favourites/index.html">Favourites</a>
-        <a href="../Movie_genres/index.html">Genres</a>
+        <a href="../index.html">Home</a>
+        <a href="../Favourites/favourites.html">Favourites</a>
+        <a href="../Movie_genres/genres.html">Genres</a>
 
         <span class="close" id="close">&times;</span>
     </div>
@@ -54,8 +54,8 @@
         <button id="fav-button">+</button>
     </div>
     <script src="index.js"></script>
-    <script src="../Movie_Section/index.js"></script>
-    <script src="../Favourites/index.js"></script>
+    <script src="../index.js"></script>
+    <script src="/Favourites/index.js"></script>
 
     <script>
         const second_nav_div = document.getElementById("second_nav_div")
