--- a/Movie_genres/genres.html
+++ b/Movie_genres/genres.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genres - Joeflix</title>
+    <title>Genres - Joetex</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="../logo.png" type="image/x-icon">
 </head>
@@ -16,7 +16,7 @@
             <button id="form-btn" class="search_btn">Search</button>
         </form>
         <div class="nav_div">
-            <a href="../Movie_Section/index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="../Favourites/favourites.html">Favourites</a>
             <a href="genres.html">Genres</a>
             <img src="../white_menu.png" alt="" class="menu" id="menu" style="display: none;">
@@ -24,9 +24,9 @@
     </nav>
     
     <div class="second_nav_div" id="second_nav_div">
-        <a href="">Home</a>
-        <a href="../Favourites/index.html">Favourites</a>
-        <a href="../Movie_genres/index.html">Genres</a>
+        <a href="../index.html">Home</a>
+        <a href="../Favourites/favourites.html">Favourites</a>
+        <a href="../Movie_genres/genres.html">Genres</a>
 
         <span class="close" id="close">&times;</span>
     </div>
@@ -47,7 +47,6 @@
 
     </script>
     <script src="../overview/index.js"></script>
-    <script src="index.js"></script>
 
     <script>
         const second_nav_div = document.getElementById("second_nav_div")
