--- a/Favourites/favourites.html
+++ b/Favourites/favourites.html
@@ -47,7 +47,7 @@
     </main>
 
     <p style="text-align: center; font-size: 20px;">    
-        <a href="../Movie_Section/index.html" style="text-decoration: none; color: #ffffff;">Exit Favourites</a>
+        <a href="../index.html" style="text-decoration: none; color: #ffffff;">Exit Favourites</a>
     </p>
     <script src="../index.js"></script>
     <script src="../overview/index.js"></script>
