--- a/overview/overview.html
+++ b/overview/overview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../index.css">
     <link rel="shortcut icon" href="../logo.png" type="image/x-icon">
-    <title>Movie overview - Joetex</title>
+    <title>Movie overview - Jojoflix</title>
 </head>
 
 <body>
