Changed the title

--- a/Movie_genres/genres.html
+++ b/Movie_genres/genres.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genres - Joetex</title>
+    <title>Genres - Jojoflix</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="../logo.png" type="image/x-icon">
 </head>
